--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -1,14 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 
-@import './layout/index.scss';
-@import './nav-bar/index.scss';
-@import './lightbulb-page/index.scss';
-
-html, body {
-  padding: 0;
-  margin: 0;
-}
-
-* {
-  font-family: 'Open Sans', sans-serif;
-}
+/*@import './layout/layout.scss';
+@import './nav-bar/nav-bar.scss';
+@import './logout/logout.scss';
+*/
