--- a/src/stylesheets/Configuracion/Configuracion.css
+++ b/src/stylesheets/Configuracion/Configuracion.css
@@ -1,95 +1,59 @@
-/* src/stylesheets/Configuracion/Configuracion.css */
+/* src/stylesheets/Configuracion.css */
 
 .configuracion {
     padding: 70px;
+    font-family: Arial, sans-serif;
 }
 
 .configuracion__title {
     font-size: 2em;
-    font-weight: bold;
     color: #333;
+    margin-bottom: 20px;
+}
+
+.configuracion__section {
     margin-bottom: 20px;
 }
 
 .configuracion__section-title {
-    font-size: 1.5em;
+    font-size: 1.2em;
     font-weight: bold;
     color: #333;
-    margin-top: 20px;
     margin-bottom: 10px;
 }
 
-.configuracion__text {
-    font-size: 1.2em;
-    color: #666;
-    margin-bottom: 10px;
-}
 
 .configuracion__buttons {
     display: flex;
-    gap: 10px;
-    margin-bottom: 20px;
+    gap: 15px;
+    margin-top: 10px; /* Añadir un margen superior si es necesario */
+    flex-wrap: wrap;
 }
 
 .configuracion__button {
-    padding: 8px 15px;
-    font-size: 1em;
-    border: 1px solid #888;
+    padding: 10px 20px;
+    background-color: #c2bbb2;
+    border: none;
     border-radius: 5px;
-    background-color: #f2cc1d;
-    color: black;
     cursor: pointer;
-    transition: background-color 0.3s;
+    font-size: 16px;
+    color: #333;
+    transition: background-color 0.3s ease;
+    margin-right: 10px; /* Espacio entre los botones */
 }
 
 .configuracion__button:hover {
-    background-color: #ddd;
+    background-color: #a6a097;
 }
 
-.configuracion__button--primary {
-    background-color: #007bff;
-    color: white;
+/* Separador para cada sección */
+.configuracion__section-divider {
+    margin: 15px 0;
+    border-bottom: 1px solid #ddd;
 }
 
-.configuracion__button--primary:hover {
-    background-color: #0056b3;
-}
 
-.configuracion__history-buttons {
-    display: flex;
-    gap: 10px;
-    margin-top: 20px;
-}
 
-.configuracion__history-button {
-    padding: 10px 20px;
-    font-size: 1em;
-    border: none;
-    border-radius: 5px;
-    background-color: #6c757d;
-    color: white;
-    cursor: pointer;
-    transition: background-color 0.3s;
-}
-
-.configuracion__history-button:hover {
-    background-color: #5a6268;
-}
-
-.configuracion__emergency-button {
-    padding: 10px 20px;
-    font-size: 1em;
-    border: none;
-    border-radius: 5px;
-    background-color: #dc3545;
-    color: white;
-    cursor: pointer;
-    transition: background-color 0.3s;
-}
-
-.configuracion__emergency-button:hover {
-    background-color: #c82333;
-}
 
 /* src/stylesheets/Configuracion/Configuracion.css */
 
