Creada la pagina Base

--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -15,3 +15,6 @@ html, body, #root {
 @import './layout/CompanyIcon.css';
 @import './nav-bar/NavBar.css';
 @import './logout/Logout.css';
+@import './Base/Base.css';
+@import './Base/FormularioAdultoMayor.css';
+@import './Base/EstadoGeneral.css';
