Seccion de medicacion lista

--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -18,3 +18,4 @@ html, body, #root {
 @import './Base/Base.css';
 @import './Base/FormularioAdultoMayor.css';
 @import './Base/EstadoGeneral.css';
+@import './Medicacion/Medicacion.css';
