--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -16,5 +16,6 @@ html, body, #root {
 @import './nav-bar/NavBar.css';
 @import './logout/Logout.css';
 @import './Base/Base.css';
+@import './Landing/Landing.css';
 @import './Base/FormularioAdultoMayor.css';
 @import './Base/EstadoGeneral.css';
